--- a/orderistic/src/components/StaffOrders.css
+++ b/orderistic/src/components/StaffOrders.css
@@ -8,6 +8,8 @@
 
 .orders-container {
   width: 100%;
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
